@@ -2,26 +2,19 @@ package main.java.log;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.concurrent.LinkedBlockingDeque;
+import java.util.stream.Collectors;
 
-/**
- * Что починить:
- * 1. Этот класс порождает утечку ресурсов (связанные слушатели оказываются
- * удерживаемыми в памяти)
- * 2. Этот класс хранит активные сообщения лога, но в такой реализации он 
- * их лишь накапливает. Надо же, чтобы количество сообщений в логе было ограничено 
- * величиной m_iQueueLength (т.е. реально нужна очередь сообщений 
- * ограниченного размера)
- */
 public class LogWindowSource {
     private int m_iQueueLength;
-    
-    private ArrayList<LogEntry> m_messages;
+
+    private LinkedBlockingDeque<LogEntry> m_messages;
     private final ArrayList<LogChangeListener> m_listeners;
     private volatile LogChangeListener[] m_activeListeners;
     
     public LogWindowSource(int iQueueLength) {
         m_iQueueLength = iQueueLength;
-        m_messages = new ArrayList<LogEntry>(iQueueLength);
+        m_messages = new LinkedBlockingDeque<LogEntry>(iQueueLength);
         m_listeners = new ArrayList<LogChangeListener>();
     }
     
@@ -41,10 +34,10 @@ public class LogWindowSource {
     
     public void append(LogLevel logLevel, String strMessage) {
         LogEntry entry = new LogEntry(logLevel, strMessage);
-        if (m_messages.size() > m_iQueueLength - 1) {
-            m_messages.remove(0);
+        while (!m_messages.offerLast(entry)) {
+            m_messages.removeFirst();
         }
-        m_messages.add(entry);
+
         LogChangeListener [] activeListeners = m_activeListeners;
         if (activeListeners == null) {
             synchronized (m_listeners) {
@@ -54,26 +47,25 @@ public class LogWindowSource {
                 }
             }
         }
+
         for (LogChangeListener listener : activeListeners) {
             listener.onLogChanged();
         }
     }
     
-    public int size()
-    {
+    public int size() {
         return m_messages.size();
     }
 
     public Iterable<LogEntry> range(int startFrom, int count) {
-        if (startFrom < 0 || startFrom >= m_messages.size()) {
+        try {
+            return m_messages.stream().skip(startFrom).limit(count).collect(Collectors.toList());
+        } catch (IllegalArgumentException ex) {
             return Collections.emptyList();
         }
-        int indexTo = Math.min(startFrom + count, m_messages.size());
-        return m_messages.subList(startFrom, indexTo);
     }
 
-    public Iterable<LogEntry> all()
-    {
+    public Iterable<LogEntry> all() {
         return m_messages;
     }
 }
